new website layout with blog

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -9,7 +9,7 @@ footnotereturnlinkcontents: "↩"
 
 permalinks:
   note: "/note/:year/:month/:day/:slug/"
-  post: "/post/:year/:month/:day/:slug/"
+  blog: "/blog/:year/:month/:day/:slug/"
 
 menu:
   main:
@@ -19,14 +19,9 @@ menu:
     - name: About
       url: "about/"
       weight: 2
-    - name: Papers
-      url: "papers/"
-      weight: 3
     - name: Blog
       url: "blog/"
-      weight: 4
-    - name: Subscribe
-      url: "index.xml"
+      weight: 3
 
 params:
   description: "Personal website of Dennis G. Wilson"
